--- a/03_JQuery_JS/项目实践01_图片轮播/index.html
+++ b/03_JQuery_JS/项目实践01_图片轮播/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="main">
+    <div class="main" id="main"> 
         <!-- 图片轮播 -->
-        <div class="banner">
+        <div class="banner" id="banner">
             <a href="#">
                 <div class="banner-slide slide1 slide-active"></div>
             </a>
@@ -25,11 +25,14 @@
         <a href="#" href="javascript:void(0)" class="button prev"></a>
         <a href="#" href="javascript:void(0)" class="button next"></a>
         <!-- 圆点导航栏 -->
-        <div class="dots">
+        <div class="dots" id="dots">
             <span class="active"></span>
             <span class=""></span>
             <span class=""></span>
         </div>
     </div>
+
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
