添加按钮绑定

--- a/03_JQuery_JS/项目实践01_图片轮播/index.html
+++ b/03_JQuery_JS/项目实践01_图片轮播/index.html
@@ -22,8 +22,8 @@
             </a>
         </div>
         <!-- 上一张, 下一张按钮 -->
-        <a href="#" href="javascript:void(0)" class="button prev"></a>
-        <a href="#" href="javascript:void(0)" class="button next"></a>
+        <a href="#" href="javascript:void(0)" class="button prev" id="prev"></a>
+        <a href="#" href="javascript:void(0)" class="button next" id="next"></a>
         <!-- 圆点导航栏 -->
         <div class="dots" id="dots">
             <span class="active"></span>
